# kanri

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: dev-ci.yaml  staging-ci.yaml
.sqlx/: query-005691ffc57191557eb0e98cf8093766c375f2714565e53614c9c0322f25a5e1.json  query-11ee04f7a1147efdaf7df60472c130b672f34c95df7a05feb353815a9b3bf461.json  query-3291c3355ab822644615f2337555d7028cf3cb3d6a37529c1f7896d5889f7898.json  query-4dc84b1e097ba3a35f3508aa2502dd8f11ae982815ec3387c413c248f17c56bc.json  query-808a0bfeb50630a703e6ec8bbf2af6995dff2ba87525b37f9d93ee4ecc7aa470.json  query-8e212583ab39a89935cf712d851920b7136e66b2332f2ac5f3f6ec055165786a.json  query-d93136632e56afd63dbf7b2d83556602ae4db460938f1aa7a22009de093c77fb.json
kubernetes/chart/: Chart.yaml  values.yaml
kubernetes/chart/charts/: index.yaml  kanri-0.1.0.tgz
kubernetes/chart/templates/: NOTES.txt  deployment.yaml  ingress.yaml  migrations.yaml
migrations/: 20241119185635_create_servers.up.sql
src/lib/: env.rs  infrastructure.rs  lib.rs  utils.rs
src/lib/application/: http.rs  messaging.rs  ports.rs
src/lib/application/http/: handlers.rs  responses.rs
src/lib/application/http/handlers/: create_server.rs  get_server.rs  get_servers.rs
src/lib/application/ports/: messaging_ports.rs  messaging_subscriber_ports.rs
src/lib/domain/: models.rs  ports.rs
src/lib/domain/server/: models.rs  ports.rs  service.rs
src/lib/domain/server/models/: server.rs  (+3 more)
src/lib/infrastructure/db/: postgres.rs
src/lib/infrastructure/messaging/: nats.rs  pubsub.rs
src/lib/infrastructure/server/: postgres.rs
(+1 files in other folders)
