[package]
name = "kanri"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/server/main.rs"
name = "kanri_server"

[lib]
path = "src/lib/lib.rs"
name = "kanri"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
