[package]
name = "kanri"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/server/main.rs"
name = "kanri_server"

[lib]
path = "src/lib/lib.rs"
name = "kanri"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio", "runtime-tokio-native-tls", "uuid"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.215", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["trace"] }
thiserror = "2.0.3"
serde_json = "1.0.133"
validator = { version = "0.19.0", features = ["derive"] }
async-nats = "0.38.0"
futures = "0.3.31"
